--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sequelize":"4.38.0",
         "mysql2":"1.5.3",
         "vue": "^2.0.1",
-        "vue-resource": "^1.3.4"
+        "vue-resource": "^1.3.4",
+        "basic-auth":"2.0.0"
     }
 }
